gitops/espresso/infrastructure/configs/capacitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor-next
  namespace: flux-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capacitor-next
  template:
    metadata:
      labels:
        app: capacitor-next
    spec:
      serviceAccountName: capacitor-next
      containers:
        - name: capacitor-next
          image: ghcr.io/gimlet-io/capacitor-next:0.14.0@sha256:95368be3e6b473108a3ccdfc15c22ed1a99475e4b92d6b11c983887dbee1860a
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 18
