gitops/espresso/infrastructure/configs/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system
spec:
  selector:
    app: capacitor
  ports:
    - name: http
      port: 80
      targetPort: http
