gitops/espresso/infrastructure/configs/capacitor/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: capacitor
  namespace: flux-system
spec:
  addresses:
    - type: IPAddress
      value: 10.0.188.5
    - type: IPAddress
      value: fd7a:115c:a1e0:188::5
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
