gitops/espresso/infrastructure/configs/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-next
  namespace: flux-system
spec:
  parentRefs:
    - name: capacitor-next
      namespace: flux-system
  rules:
    - backendRefs:
        - name: capacitor-next
          port: 80
